Jenkins/topic5/nexus/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus
  name: nexus-svc
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081


    - port: 8081
      protocol: TCP
      name: http
      targetPort: 8081
    - port: 8082
      name: docker
      targetPort: 8082
  selector: 
    app: nexus
  type: LoadBalancer
