Jenkins/topic5/nexus/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress



spec:
  rules:
  - host: nexus
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-svc
          servicePort: 8081
